--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -141,3 +141,21 @@ form h2 {
   color: white;
   margin-top: 50px;
 }
+
+form input[type="radio"] {
+  height: 20px;
+  margin-left: -120px;
+  margin-right: 10px;
+}
+
+.delivery {
+  display: flex;
+}
+label {
+  margin-left: px;
+  margin-left: -130px;
+  margin-top: 8px;
+
+  font-size: 1.3rem;
+  color: white;
+}
