--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,17 +8,16 @@
 #root {
   max-width: 100wh;
   width: 100vw;
-  height: 100vh;
+
   margin: auto;
   padding: 2rem;
   /* text-align: center; */
-  background-color: #053974e8;
+  background-color: #ffffffe8;
 }
 body {
-  width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: aquamarine;
+  background-color: rgb(255, 255, 255);
 }
 /* .App {
   display: flex;
@@ -31,12 +30,11 @@ body {
 .main-content {
   display: flex;
   flex-direction: column;
-  height: 100%;
 }
 .hero {
   display: flex;
   justify-content: space-between;
-  width: 100%;
+
   height: 70px;
   background-color: black;
 }
@@ -61,7 +59,6 @@ body {
 }
 
 .pizza-page {
-  width: 100%;
   height: 450px;
   display: flex;
   justify-content: center;
@@ -112,14 +109,17 @@ body {
 .next-btn button {
   box-shadow: 10px 10px 20x rgba(0, 0, 0, 0.226);
   padding: 10px;
-  width: 200px;
+  font-size: 1.3rem;
   background-color: rgb(2, 221, 255);
   border: none;
-  margin-left: 1410px;
+  margin-left: 1320px;
+  margin-top: 20px;
+  color: white;
+  width: 300px;
+  box-shadow: 10px 10px 10px rgba(4, 182, 242, 0.232);
   cursor: pointer;
 }
 .customer-page {
-  width: 100%;
   background-color: ble;
   height: 100%;
   display: flex;
@@ -142,20 +142,88 @@ form h2 {
   margin-top: 50px;
 }
 
-form input[type="radio"] {
-  height: 20px;
-  margin-left: -120px;
-  margin-right: 10px;
-}
-
-.delivery {
+.shipping {
   display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: start;
+  width: 500px;
 }
-label {
-  margin-left: px;
-  margin-left: -130px;
-  margin-top: 8px;
+.shipping input[type="radio"] {
+  margin-left: -100px;
+  height: 25px;
+  align-items: center;
+}
 
+.shipping label {
+  color: black;
+  text-align: center;
+  font-size: 1.2rem;
+  margin-left: 20px;
+  margin-left: -30px;
+}
+.checkout {
+  display: flex;
+  flex-direction: column;
+}
+.checkout-content {
+}
+.checkout-content h3 {
+  margin-top: 20px;
+  margin-bottom: 20px;
   font-size: 1.3rem;
-  color: white;
+}
+.checkout-items p {
+  font-size: 1.5rem;
+  padding: 3px;
+}
+
+.checkout-items {
+}
+img {
+}
+.checkout-items img {
+  width: 120px;
+}
+/* Apply Flexbox to .table-data for horizontal layout */
+/* Apply Flexbox to .table-data for horizontal layout */
+.table-data {
+  display: flex;
+  flex-direction: row;
+}
+
+.table-data table {
+  border-collapse: collapse;
+  width: 1000px;
+  margin: auto auto;
+}
+
+.table-data table thead tr {
+  padding: 30px;
+  border: 1px solid black;
+  background-color: aqua;
+}
+
+.table-data table th {
+  border: 1px solid black;
+  padding: 10px;
+}
+
+.table-data table tbody tr {
+  padding: 20px;
+  border: 1px solid black;
+  text-align: left;
+}
+table th {
+  text-align: left;
+}
+
+.table-data table td {
+  border: 1px solid black;
+  text-align: left;
+  padding: 10px;
+}
+table h4 {
+  margin-top: 20px;
+  margin-left: 1300px;
 }
