--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -171,6 +171,19 @@ form h2 {
   margin-top: 20px;
   font-size: 1.2rem;
 }
+.checkout button {
+  box-shadow: 10px 10px 20x rgba(0, 0, 0, 0.226);
+  padding: 10px;
+  font-size: 1.3rem;
+  background-color: rgb(2, 221, 255);
+  border: none;
+  margin-left: 1100px;
+  margin-top: 30px;
+  color: white;
+  width: 250px;
+  box-shadow: 10px 10px 10px rgba(4, 182, 242, 0.232);
+  cursor: pointer;
+}
 
 .checkout-content h3 {
   margin-top: 20px;
